# codex-shim

./: README.md  pyproject.toml
codex_shim/: __init__.py  catalog.py  cli.py  config.py  settings.py
tests/: test_config.py  test_settings_catalog.py
