[project]
name = "codex-vibeproxy-shim"
version = "0.2.0"
description = "Opt-in Codex shim that exposes VibeProxy models in the picker."
requires-python = ">=3.11"
dependencies = ["tomli_w>=1.0"]

[project.optional-dependencies]
dev = ["aiohttp>=3.9", "pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
codex-shim = "codex_shim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

